# ripple-detection

./: .gitattributes  .gitignore  README.md  environments.yml  environments_lightweight.yml  environments_test.yml  pyproject.toml  ripple_env.yml
notebooks/: compare_sleep_score.ipynb  plot_sleep_ripples.ipynb  plot_sleep_spindles.ipynb
scripts/: run_ripple_detection.py
src/: demo_neuralynx.py  demo_neuralynx_ptsa.py  exampleNCStoRipples.ipynb  exampleNCStoRipples_ptsa.ipynb  exampleNCStoRipples_ptsa_Xin.ipynb  general.py  h2jupynb
src/ripple_detection/: filters.py  general.py  mne_utils.py  neuralynx_ripple.py  slow_wave_ripple.py
src/sleep_score/: analysis.py
test/data/: LA1.ncs  LA2.ncs  LAH1.ncs  LAH2.ncs
