[tool.poetry]
name = "ripple-detection"
version = "0.1.0"
description = "ripple detection on iEEG data."
authors = ["Xin Niu <michaelniki1988@gmail.com>"]

packages = [
    { include = "ripple_detection", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.1"
numpy = ">=1.22.3,<2.0.0"
matplotlib = "^3.10.0"
# scipy = "1.10.1"
scipy = "^1.15.0"
mat73 = "^0.65"
mne = "^1.9.0"
neo = "^0.13.4"
seaborn = "^0.13.2"
# ptsa = { git="git@github.com:pennmem/ptsa.git", branch="master" }
xarray = "2025.1.1"
swig = "4.2.1"
traits = "6.4.1"
statsmodels = "0.14.4"
nwbPipeline = { git="git@github.com:NxNiki/nwbPipeline.git", branch="main" }

[tool.poetry.dev-dependencies]
jupyterlab-widgets = "^3.0.9"
jupyterlab = "^4.3.2"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
